# bg-be-gone

./: .gitignore  LICENSE  NOTICE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml  release.yml
data/: io.github.cristeigabriela.BgBeGone.desktop  io.github.cristeigabriela.BgBeGone.metainfo.xml
packaging/: build-appimage.sh
spec/: README.md  check.sh
spec/assets/: gen_scene.py
spec/fixtures/: 01_image_only.json  02_image_zoom4.json  03_image_rot90_fliph.json  04_seg_idle.json  05_hover_single.json  06_hover_stack.json  07_hover_stack_drilled.json  08_select_one.json  09_select_two_UNION.json  10_select_pop.json  11_press_held.json  12_press_released.json  13_press_decayed.json  14_morph_enter.json  15_morph_switch.json  16_morph_leave.json  17_shimmer_mid.json  18_shimmer_late.json  19_point_mode.json  20_reveal_mid.json  21_seg_zoom4_hover.json  22_seg_zoom4_select.json  23_output_transparent.json  24_output_solid.json  25_output_solid_zoom4.json  26_seg_rot90_select.json  27_seg_flip_hover_stack.json  28_seg_rot270_flipv_point.json
spec/goldens/: cv.json  round_cases.json  sidebar.json  ui_schema.json  ui_schema.json.ts.actual
spec/tools/: cvgold.py  displaylist.py  (+3 more)
tests/: test_engine_anim.py  test_engine_hittest.py  test_engine_interaction.py  test_engine_outputs.py  test_engine_pane.py  test_engine_protocol.py  test_engine_settings.py  test_engine_stdlib_only.py  test_live_app_segment.py  test_live_segment.py  test_live_tick.py  test_mask_union.py  test_outputs_impl.py  test_worker_smoke.py
web/: README.md  conform.ts
(+86 files in other folders)
